--- a/Jigu-GPIO.ioc
+++ b/Jigu-GPIO.ioc
@@ -3,26 +3,30 @@ CAD.formats=
 CAD.pinconfig=
 CAD.provider=
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32L432KCU3
 Mcu.Family=STM32L4
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SYS
-Mcu.IP3=USART2
-Mcu.IPNb=4
+Mcu.IP3=TIM2
+Mcu.IP4=USART2
+Mcu.IPNb=5
 Mcu.Name=STM32L432K(B-C)Ux
 Mcu.Package=UFQFPN32
 Mcu.Pin0=PC14-OSC32_IN (PC14)
 Mcu.Pin1=PC15-OSC32_OUT (PC15)
+Mcu.Pin10=VP_SYS_VS_Systick
 Mcu.Pin2=PA0
 Mcu.Pin3=PA2
-Mcu.Pin4=PA13 (JTMS-SWDIO)
-Mcu.Pin5=PA14 (JTCK-SWCLK)
-Mcu.Pin6=PA15 (JTDI)
-Mcu.Pin7=PB3 (JTDO-TRACESWO)
-Mcu.Pin8=VP_SYS_VS_Systick
-Mcu.PinsNb=9
+Mcu.Pin4=PA5
+Mcu.Pin5=PA6
+Mcu.Pin6=PA13 (JTMS-SWDIO)
+Mcu.Pin7=PA14 (JTCK-SWCLK)
+Mcu.Pin8=PA15 (JTDI)
+Mcu.Pin9=PB3 (JTDO-TRACESWO)
+Mcu.PinsNb=11
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L432KCUx
@@ -64,6 +68,12 @@ PA2.GPIO_Label=VCP_TX
 PA2.Locked=true
 PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
+PA5.Signal=S_TIM2_CH1
+PA6.GPIOParameters=GPIO_Speed,GPIO_Label
+PA6.GPIO_Label=GPIO1
+PA6.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PA6.Locked=true
+PA6.Signal=GPIO_Output
 PB3\ (JTDO-TRACESWO).GPIOParameters=GPIO_Label
 PB3\ (JTDO-TRACESWO).GPIO_Label=LD3 [Green]
 PB3\ (JTDO-TRACESWO).Locked=true
@@ -103,61 +113,67 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true
 RCC.48CLKFreq_Value=24000000
-RCC.AHBFreq_Value=32000000
-RCC.APB1Freq_Value=32000000
-RCC.APB1TimFreq_Value=32000000
-RCC.APB2Freq_Value=32000000
-RCC.APB2TimFreq_Value=32000000
-RCC.CortexFreq_Value=32000000
-RCC.FCLKCortexFreq_Value=32000000
+RCC.AHBCLKDivider=RCC_SYSCLK_DIV4
+RCC.AHBFreq_Value=10000000
+RCC.APB1Freq_Value=10000000
+RCC.APB1TimFreq_Value=10000000
+RCC.APB2Freq_Value=10000000
+RCC.APB2TimFreq_Value=10000000
+RCC.CortexFreq_Value=10000000
+RCC.FCLKCortexFreq_Value=10000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=32000000
+RCC.HCLKFreq_Value=10000000
 RCC.HSE_VALUE=8000000
 RCC.HSI16_VALUE=16000000
 RCC.HSI48_VALUE=48000000
 RCC.HSI_VALUE=16000000
-RCC.I2C1Freq_Value=32000000
+RCC.I2C1Freq_Value=10000000
 RCC.I2C2Freq_Value=16000000
-RCC.I2C3Freq_Value=32000000
-RCC.IPParameters=48CLKFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI16_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,LCDFreq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIMFreq_Value,LPUART1Freq_Value,LPUARTFreq_Value,LSCOPinFreq_Value,LSI_VALUE,MCO1PinFreq_Value,MCOPinFreq_Value,MSI_VALUE,PLLCLKFreq_Value,PLLMUL,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PWRFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SAI1Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TIMFreq_Value,TimerFreq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value,WatchDogFreq_Value
+RCC.I2C3Freq_Value=10000000
+RCC.IPParameters=48CLKFreq_Value,AHBCLKDivider,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI16_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,LCDFreq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIMFreq_Value,LPUART1Freq_Value,LPUARTFreq_Value,LSCOPinFreq_Value,LSI_VALUE,MCO1PinFreq_Value,MCOPinFreq_Value,MSI_VALUE,PLLCLKFreq_Value,PLLMUL,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PWRFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SAI1Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TIMFreq_Value,TimerFreq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value,WatchDogFreq_Value
 RCC.LCDFreq_Value=37000
-RCC.LPTIM1Freq_Value=32000000
-RCC.LPTIM2Freq_Value=32000000
+RCC.LPTIM1Freq_Value=10000000
+RCC.LPTIM2Freq_Value=10000000
 RCC.LPTIMFreq_Value=32000000
-RCC.LPUART1Freq_Value=32000000
+RCC.LPUART1Freq_Value=10000000
 RCC.LPUARTFreq_Value=32000000
 RCC.LSCOPinFreq_Value=32000
 RCC.LSI_VALUE=32000
-RCC.MCO1PinFreq_Value=32000000
+RCC.MCO1PinFreq_Value=40000000
 RCC.MCOPinFreq_Value=32000000
 RCC.MSI_VALUE=4000000
 RCC.PLLCLKFreq_Value=32000000
 RCC.PLLMUL=RCC_PLLMUL_4
-RCC.PLLN=16
-RCC.PLLPoutputFreq_Value=9142857.142857144
-RCC.PLLQoutputFreq_Value=32000000
-RCC.PLLRCLKFreq_Value=32000000
+RCC.PLLN=20
+RCC.PLLPoutputFreq_Value=11428571.42857143
+RCC.PLLQoutputFreq_Value=40000000
+RCC.PLLRCLKFreq_Value=40000000
 RCC.PLLSAI1PoutputFreq_Value=4571428.571428572
 RCC.PLLSAI1QoutputFreq_Value=16000000
 RCC.PLLSAI1RoutputFreq_Value=16000000
-RCC.PWRFreq_Value=32000000
+RCC.PWRFreq_Value=40000000
 RCC.RTCFreq_Value=32000
 RCC.RTCHSEDivFreq_Value=4000000
 RCC.SAI1Freq_Value=4571428.571428572
-RCC.SWPMI1Freq_Value=32000000
-RCC.SYSCLKFreq_VALUE=32000000
+RCC.SWPMI1Freq_Value=10000000
+RCC.SYSCLKFreq_VALUE=40000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TIMFreq_Value=32000000
 RCC.TimerFreq_Value=32000000
-RCC.USART1Freq_Value=32000000
-RCC.USART2Freq_Value=32000000
+RCC.USART1Freq_Value=10000000
+RCC.USART2Freq_Value=10000000
 RCC.USART3Freq_Value=16000000
 RCC.VCOInputFreq_Value=4000000
-RCC.VCOOutputFreq_Value=64000000
+RCC.VCOOutputFreq_Value=80000000
 RCC.VCOSAI1OutputFreq_Value=32000000
 RCC.WatchDogFreq_Value=32000
+SH.S_TIM2_CH1.0=TIM2_CH1,PWM Generation1 CH1
+SH.S_TIM2_CH1.ConfNb=1
+TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM2.IPParameters=Channel-PWM Generation1 CH1,AutoReloadPreload
 USART2.IPParameters=VirtualMode-Asynchronous
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
