--- a/Jigu-GPIO.ioc
+++ b/Jigu-GPIO.ioc
@@ -30,8 +30,8 @@ Mcu.PinsNb=11
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L432KCUx
-MxCube.Version=6.8.0
-MxDb.Version=DB.6.0.80
+MxCube.Version=6.8.1
+MxDb.Version=DB.6.0.81
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
@@ -113,7 +113,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM2_Init-TIM2-true-HAL-true
 RCC.48CLKFreq_Value=24000000
 RCC.AHBCLKDivider=RCC_SYSCLK_DIV4
 RCC.AHBFreq_Value=10000000
@@ -173,7 +173,9 @@ SH.S_TIM2_CH1.0=TIM2_CH1,PWM Generation1 CH1
 SH.S_TIM2_CH1.ConfNb=1
 TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM2.IPParameters=Channel-PWM Generation1 CH1,AutoReloadPreload
+TIM2.IPParameters=Channel-PWM Generation1 CH1,AutoReloadPreload,Period,Pulse-PWM Generation1 CH1
+TIM2.Period=49999
+TIM2.Pulse-PWM\ Generation1\ CH1=39
 USART2.IPParameters=VirtualMode-Asynchronous
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
